--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -10,7 +10,7 @@ It's all fun and exciting when I learned these new tools. But I have to admit th
 <br>
 **Some general recommendation**:  
 
- * The more you practice, more line of codes that you write, more function that you memorize, I think the more you will like this journey.    
+ * The more you practice/habituate/condition, more line of codes that you write, more function that you memorize, I think the more you will like this journey.    
  * Readers can follow this book several ways:  
     
     + If you are interested in particular methods/tools, you can jump to that section by clicking the section name.  
