--- a/02-descriptive-stat.Rmd
+++ b/02-descriptive-stat.Rmd
@@ -1,28 +1,5 @@
 # Descriptive Statistics {#descriptive-stat}
-When you have an area of interest that you to research, a problem that you want to solve, a relationship that you want to investigate, theoretical and empirical processes will help you.  
-
- | Discrete Variable | Continuous Variable
---- | --- | ---
-$E(Y)$ | $\sum_{i=1}^k y_i p_i$ | $\int_{-\infty}^{\infty} f(y) dy$
-$\overline{y}$ | $\frac{1}{n} \sum_{i = 1}^{n} y_i$ | $\frac{1}{n} \sum_{i = 1}^{n} y_i$
-
-
-Momemt | Uncentered | Centered 
----|---|---
-1st | $E(X)=\mu$| 
-2nd | $E(X^2)$ | $E((X-\mu)^2)$
-3rd | $E(X^3)$ | $E((X-\mu)^3)$
-4th | $E(X^4)$ | $E((X-\mu)^4)$
-
-Mean(X) = $E(X)$  
-
-Var(X) = $E((X-\mu)^2)=\sigma^2$  
-
-Skewness(X) = $E((X-\mu)^3)/\sigma^3$  
-
-Kurtosis(X) = $E((X-\mu)^4)/\sigma^4$  
-
-
+When you have an area of interest that you want to research, a problem that you want to solve, a relationship that you want to investigate, theoretical and empirical processes will help you.  
 ## Numerical Measures
 
 There is a difference between a population and a sample
@@ -138,11 +115,13 @@ Common tests are
 [@Looney_1985] [@Shapiro_1972]
 The correlation coefficient between $y_{(i)}$ and $m_i^*$ as given on the normal probability plot:  
 
-$W^*=\frac{\sum_{i=1}^{n}(y_{(i)}-\bar{y})(m_i^*-0)}{(\sum_{i=1}^{n}(y_{(i)}-\bar{y})^2\sum_{i=1}^{n}(m_i^*-0)^2)^.5}$ where $\bar{m^*}=0$
+$$W^*=\frac{\sum_{i=1}^{n}(y_{(i)}-\bar{y})(m_i^*-0)}{(\sum_{i=1}^{n}(y_{(i)}-\bar{y})^2\sum_{i=1}^{n}(m_i^*-0)^2)^.5}$$
+
+where $\bar{m^*}=0$
 
 Pearson product moment formula for correlation:  
 
-$\hat{p}=\frac{\sum_{i-1}^{n}(y_i-\bar{y})(x_i-\bar{x})}{(\sum_{i=1}^{n}(y_{i}-\bar{y})^2\sum_{i=1}^{n}(x_i-\bar{x})^2)^.5}$
+$$\hat{p}=\frac{\sum_{i-1}^{n}(y_i-\bar{y})(x_i-\bar{x})}{(\sum_{i=1}^{n}(y_{i}-\bar{y})^2\sum_{i=1}^{n}(x_i-\bar{x})^2)^.5}$$
 
  * When the correlation is 1, the plot is exactly linear and normality is assumed. 
  * The closer the correlation is to zero, the more confident we are to reject normality
@@ -152,7 +131,7 @@ $\hat{p}=\frac{\sum_{i-1}^{n}(y_i-\bar{y})(x_i-\bar{x})}{(\sum_{i=1}^{n}(y_{i}-\
 [@Shapiro_1965]  
 
 
-$W=(\frac{\sum_{i=1}^{n}a_i(y_{(i)}-\bar{y})(m_i^*-0)}{(\sum_{i=1}^{n}a_i^2(y_{(i)}-\bar{y})^2\sum_{i=1}^{n}(m_i^*-0)^2)^.5})^2$
+$$W=(\frac{\sum_{i=1}^{n}a_i(y_{(i)}-\bar{y})(m_i^*-0)}{(\sum_{i=1}^{n}a_i^2(y_{(i)}-\bar{y})^2\sum_{i=1}^{n}(m_i^*-0)^2)^.5})^2$$
 
 where $a_1,..,a_n$ are weights computed from the covariance matrix for the order statistics.
 
@@ -164,7 +143,7 @@ where $a_1,..,a_n$ are weights computed from the covariance matrix for the order
 The formula for the empirical cumulative distribution function (CDF) is:  
 
 $F_n(t)$  = estimate of probability that an observation $\le$ t
-= (number of observation $\let$ t)/n
+= (number of observation $\le$ t)/n
 
  This method requires large sample sizes. However, it can apply to distributions other than the normal (Gaussian) one.
 
@@ -174,7 +153,7 @@ $F_n(t)$  = estimate of probability that an observation $\le$ t
 
 The Anderson-Darling statistic:  
 
-$A^2=\int_{-\infty}^{\infty}(F_n(t)=F(t))^2\frac{dF(t)}{F(t)(1-F(t))}$
+$$A^2=\int_{-\infty}^{\infty}(F_n(t)=F(t))^2\frac{dF(t)}{F(t)(1-F(t))}$$
 
  * a weight average of squared deviations (it weights small and large values of t more)
  
