--- a/03-regression-analysis.Rmd
+++ b/03-regression-analysis.Rmd
@@ -15,9 +15,12 @@ The most fundamental model in statistics or econometric is a OLS linear regressi
 |     |           |        | Normality of Errors|
 
 
+### Feasible Generalized Least Squares
+
+
 
 ### Weighted Least Squares
 
-## Generalized Least Squares
+### Generalized Least Squares
 
 ## Non-linear Regression
