--- a/04-ANOVA.Rmd
+++ b/04-ANOVA.Rmd
@@ -1,6 +1,6 @@
 # Experimental Design
 ## Analysis of Variance (ANOVA)
-ANOVA is using the same underlying mechanism as linear regression. However, the angle that ANOVA chooses to look at is slight different from the traditional linear regression. It can be more useful in the case with **qualitative variables** and **designed experiments**.  
+ANOVA is using the same underlying mechanism as linear regression. However, the angle that ANOVA chooses to look at is slightly different from the traditional linear regression. It can be more useful in the case with **qualitative variables** and **designed experiments**.  
 
 <br>
 Experimental Design  
@@ -42,7 +42,7 @@ Randomization may also eliminate correlations due to time and space.
 
 ### Completely Randomized Design (CRD)
 
-Treatment factor A with $a\ge2$ treatments levels.
+Treatment factor A with $a\ge2$  treatments levels.
 Experimental units are randomly assinged to each treatment. The number of experiemntal units in each group can be  
 
  * equal (balanced): n
@@ -65,11 +65,11 @@ Experimental units are randomly assinged to each treatment. The number of experi
 |Sample Mean | $\bar{Y_{1.}}$|$\bar{Y_{2.}}$| ... | $\bar{Y_{a.}}$
 | Sample SD | $s_1$| $s_2$| ...| $s_a$|
 
-where $\bar{Y_{i.}}=\frac{1}{n_i}\sum_{j=1}^{n_i}Y_{ij}$ 
+where $\bar{Y_{i.}}=\frac{1}{n_i}\sum_{j=1}^{n_i}Y_{ij}$  
 
-$s_i^2=\frac{1}{n_i-1}\sum_{j=1}^{n_i}(Y_{ij}-\bar{Y_i})^2$
+$s_i^2=\frac{1}{n_i-1}\sum_{j=1}^{n_i}(Y_{ij}-\bar{Y_i})^2$  
 
-And the grand mean is $\bar{Y_{..}}=\frac{1}{N}\sum_{i}\sum_{j}Y_{ij}$
+And the grand mean is $\bar{Y_{..}}=\frac{1}{N}\sum_{i}\sum_{j}Y_{ij}$  
 
 #### Single Factor (One-Way) ANOVA
 
@@ -78,28 +78,33 @@ Partitioning the Variance
 The total variability of the $Y_{ij}$ observation can be measured as the deviation of $Y_{ij}$ around the overall mean $\bar{Y_{..}}$:  $Y_{ij} - \bar{Y_{..}}$  
 
 This can be rewritten as: 
-
-\begin{align*}
+$$
+\begin{split}
 Y_{ij} - \bar{Y_{..}}&=Y_{ij} - \bar{Y_{..}} + \bar{Y_{i.}} - \bar{Y_{i.}} \\
 &= (\bar{Y_{i.}}-\bar{Y_{..}})+(Y_{ij}-\bar{Y_{i.}})
-\end{align*}
-
+\end{split}
+$$
 where 
 
  * the first term is the *between* treatment differences (i.e., the deviation of the treatment mean from the overall mean)  
  * the second term is *within* treatment differences (i.e., the deviation of the observation around its treatment mean)
 
-\begin{align*}
+<br>
+
+
+$$
+\begin{split}
 \sum_{i}\sum_{j}(Y_{ij} - \bar{Y_{..}})^2 &=  \sum_{i}n_i(\bar{Y_{i.}}-\bar{Y_{..}})^2+\sum_{i}\sum_{j}(Y_{ij}-\bar{Y_{i.}})^2 \\
 SSTO &= SSTR + SSE \\
 total~SS &= treatment~SS + error~SS \\
 (N-1)~d.f. &= (a-1)~d.f. + (N - a) ~ d.f.
-\end{align*}
+\end{split}
+$$
 
 we lose a d.f. for the total corrected SSTO because of the estimation of the mean ($\sum_{i}\sum_{j}(Y_{ij} - \bar{Y_{..}})=0$)  
-And, for the SSTR $\sum_{i}n_i(\bar{Y_{i.}}-\bar{Y_{..}})=0$
+And, for the SSTR $\sum_{i}n_i(\bar{Y_{i.}}-\bar{Y_{..}})=0$  
 
-Accordingly, $MSTR= \frac{SST}{a-1}$ and $MSR=\frac{SSE}{N-a}$
+Accordingly, $MSTR= \frac{SST}{a-1}$ and $MSR=\frac{SSE}{N-a}$  
 
 ANOVA table
 
@@ -113,12 +118,12 @@ Linear Model Explanation of ANOVA
 
 ##### Cell means model
 
-$Y_{ij}=\mu_i+\epsilon_{ij}$
+$Y_{ij}=\mu_i+\epsilon_{ij}$  
 
 where  
  * $Y_{ij}$ response variable in j-th subject for the i-th treatment  
  * $\mu_i$: parameters (fixed) representing the unknown population mean for the i-th treatment  
- * $\epsilon_{ij}$ independent $N(0,\sigma^2)$ errors  
+ * $\epsilon_{ij}$  independent  $N(0,\sigma^2)$  errors  
  
  * $E(Y_{ij})=\mu_i$ $var(Y_{ij})=var(\epsilon_{ij})=\sigma^2$  
  * All observations have the same variance
@@ -126,11 +131,15 @@ where
  
 Example:
 
-a = 3 (3 treatments) $n_1=n_2=n_3=2$
+a = 3 (3 treatments) $n_1=n_2=n_3=2$  
+
+
+<br>
+
 
 
 $$
-\begin{align*}
+\begin{split}
 \left(\begin{array}{c} 
 Y_{11}\\
 Y_{12}\\
@@ -160,23 +169,27 @@ Y_{32}\\
 \epsilon_{32} \\
 \end{array}\right)\\
 \mathbf{y} &= \mathbf{X\beta} +\mathbf{\epsilon}
-\end{align*}
+\end{split}
 $$
+
+
 $X_{k,ij}=1$ if the k-th treatment is used  
 
-$X_{k,ij}=0$ Otherwise
+$X_{k,ij}=0$ Otherwise  
 
-Note: no intercept term. 
+<br>
 
-$$
-\begin{align}
+
+Note: no intercept term.  
+
+\begin{equation}
+\begin{split}
 \mathbf{b}= \left[\begin{array}{c}
 \mu_1 \\
 \mu_2 \\
 \mu_3 \\
 \end{array}\right] &= 
 (\mathbf{x}'\mathbf{x})^{-1}\mathbf{x}'\mathbf{y} \\
-
 & = 
 \left[\begin{array}{ccc}
 n_1 & 0 & 0\\
@@ -188,19 +201,23 @@ Y_1\\
 Y_2\\
 Y_3\\
 \end{array}\right] \\
-
 & = 
 \left[\begin{array}{c}
 \bar{Y_1}\\
 \bar{Y_2}\\
 \bar{Y_3}\\
-\end{array}\right]
-\end{align} (\#eq:beta_origin)
-$$
+\end{array}\right] 
+\end{split} 
+(\#eq:betaorigin)
+\end{equation}
 
-is the BLUE (best linear unbiased estimator) for $\beta=[\mu_1 \mu_2\mu_3]'$ 
+is the BLUE (best linear unbiased estimator) for $\beta=[\mu_1 \mu_2\mu_3]'$  
 
-$$E(\mathbf{b})=\beta$$
+<br>
+
+
+$$E(\mathbf{b})=\beta$$  
+
 
 $$
 var(\mathbf{b})=\sigma^2(\mathbf{X'X})^{-1}=\sigma^2
@@ -211,35 +228,40 @@ var(\mathbf{b})=\sigma^2(\mathbf{X'X})^{-1}=\sigma^2
 \end{array}\right]
 $$
 
-$var(b_i)=var(\hat{\mu_i})=\sigma^2/n_i$  where $\mathbf{b} \sim N(\beta,\sigma^2(\mathbf{X'X})^{-1})$
+
+$var(b_i)=var(\hat{\mu_i})=\sigma^2/n_i$  where $\mathbf{b} \sim N(\beta,\sigma^2(\mathbf{X'X})^{-1})$  
+
 
 $$
-\begin{align*}
+\begin{split}
 MSE &= \frac{1}{N-a} \sum_{i}\sum_{j}(Y_{ij}-\bar{Y_{i.}})^2 \\
     &= \frac{1}{N-a} \sum_{i}[(n_i-1)\frac{\sum_{i}(Y_{ij}-\bar{Y_{i.}})^2}{n_i-1}] \\
     &= \frac{1}{N-a} \sum_{i}(n_i-1)s_1^2
-\end{align*}
+\end{split}
 $$
 
-We have $E(s_i^2)=\sigma^2$
+We have $E(s_i^2)=\sigma^2$  
+
+
 $E(MSE)=\frac{1}{N-a}\sum_{i}(n_i-1)\sigma^2=\sigma^2$  
 
 Hence, MSE is an unbiased estimator of $\sigma^2$, regardless of whether the treatment means are equal or not.
 
-$E(MSTR)=\sigma^2+\frac{\sum_{i}n_i(\mu_i-\mu_.)^2}{a-1}$
+$E(MSTR)=\sigma^2+\frac{\sum_{i}n_i(\mu_i-\mu_.)^2}{a-1}$  
 where 
-$\mu_.=\frac{\sum_{i=1}^{a}n_i\mu_i}{\sum_{i=1}^{a}n_i}$
-If all treatment means are equals (=$\mu_.$), $E(MSTR)=\sigma^2$.
+$\mu_.=\frac{\sum_{i=1}^{a}n_i\mu_i}{\sum_{i=1}^{a}n_i}$  
+If all treatment means are equals (=$\mu_.$), $E(MSTR)=\sigma^2$.  
 
 Then we can use an F-test for teh equality of all treatment means: 
-$$H_0:\mu_1=\mu_2=..=\mu_a$$
+
+$$H_0:\mu_1=\mu_2=..=\mu_a$$  
 
 
-$$H_a: not~al l~ \mu_i ~ are ~ equal $$
+$$H_a: not~al l~ \mu_i ~ are ~ equal $$  
 
-$F=\frac{MSTR}{MSE}$
-where large values of F support $H_a$ (since MSTR will tend to exceed MSE when $H_a$ holds)
-and F near 1 support $H_0$ (upper tail test)
+$F=\frac{MSTR}{MSE}$  
+where large values of F support $H_a$ (since MSTR will tend to exceed MSE when $H_a$ holds)  
+and F near 1 support $H_0$ (upper tail test)  
 
 **Equivalently**, when $H_0$ is true, $F \sim f_{(a-1,N-a)}$  
 
@@ -258,13 +280,22 @@ where
  * $Y_{ij}$ is the j-th response for the i-th treatment  
  * $\tau_i$ i-th treatment effect  
  * $\mu$ constant component, common to all observations  
- * $\epsilon_{ij}$ independent random errors ~ $N(0,\sigma^2)$  
+ * $\epsilon_{ij}$   independent random errors ~   $N(0,\sigma^2)$   
+
+
+<br>
 
 
 
-For example, a = 3, $n_1=n_2=n_3=2$
-$$
-\begin{align}
+For example, a = 3, $n_1=n_2=n_3=2$  
+
+
+<br>
+
+
+
+\begin{equation} 
+\begin{split}
 \left(\begin{array}{c} 
 Y_{11}\\
 Y_{12}\\
@@ -294,9 +325,14 @@ Y_{32}\\
 \epsilon_{31} \\
 \epsilon_{32} \\
 \end{array}\right)\\
-\mathbf{y} &= \mathbf{X\beta} +\mathbf{\epsilon} (\#eq:unsolvable)
-\end{align}
-$$
+\mathbf{y} &= \mathbf{X\beta} +\mathbf{\epsilon} 
+\end{split}
+(\#eq:unsolvable)
+\end{equation} 
+
+
+<br>
+
 
 However, 
 
@@ -310,49 +346,77 @@ n_3 & 0 & 0 & n_3 \\
 \end{array}\right)
 $$
 
-is **singular** thus does not exist, $\mathbf{b}$ is insolvable (infinite solutions)
-Hence, we have to impose restrictions on the parameters to a model matrix $\mathbf{X}$ of full rank.
+is **singular** thus does not exist, $\mathbf{b}$ is insolvable (infinite solutions)  
 
-Whatever restriction we use, we still have: 
-$E(Y_{ij})=\mu + \tau_i = \mu_i = mean ~ response ~ for ~ i-th ~ treatment$
+Hence, we have to impose restrictions on the parameters to a model matrix $\mathbf{X}$ of full rank.  
+
+Whatever restriction we use, we still have:  
+
+$E(Y_{ij})=\mu + \tau_i = \mu_i = mean ~ response ~ for ~ i-th ~ treatment$  
 
 ###### Restriction on sum of tau
 
-$\sum_{i=1}^{a}\tau_i=0$ 
+$\sum_{i=1}^{a}\tau_i=0$  
 
-implies 
+<br>
+
+
+implies  
+
 
 $$
 \mu= \mu +\frac{1}{a}\sum_{i=1}^{a}(\mu+\tau_i)
 $$
+
+<br>
+
+
 is the average of the treatment mean (grand mean) (overall mean) 
 
 $$
-\begin{align*}
+\begin{split}
 \tau_i  &=(\mu+\tau_i) -\mu = \mu_i-\mu \\
         &= (treatment ~ mean) -(grand~mean) \\
         &= treatment ~ effect
-\end{align*}
+\end{split}
 $$
+
+
+<br>
+
+
 $$
 \tau_a=-\tau_1-\tau_2-...-\tau_{a-1}
 $$
-Hence, the mean for the a-th treatment is 
+
+
+Hence, the mean for the a-th treatment is  
+
+<br>
+
+
+
 $$
 \mu_a=\mu+\tau_a=\mu-\tau_1-\tau_2-...-\tau_{a-1}
 $$
 
-Hence, the model need only "a" parameters:
+Hence, the model need only "a" parameters:  
+
+<br>
+
+
+
 $$
 \mu,\tau_1,\tau_2,..,\tau_{a-1}
 $$
 
 
-Equation \@ref(eq:unsolvable) becomes
+Equation \@ref(eq:unsolvable) becomes  
 
+<br>
 
-$$
-\begin{align*}
+\begin{equation}
+\begin{split}
 \left(\begin{array}{c} 
 Y_{11}\\
 Y_{12}\\
@@ -382,24 +446,27 @@ Y_{32}\\
 \epsilon_{32} \\
 \end{array}\right)\\
 \mathbf{y} &= \mathbf{X\beta} +\mathbf{\epsilon}
+\end{split}
+\end{equation}
 
-\end{align*}
-$$
+where $\beta\equiv[\mu,\tau_1,\tau_2]'$  
 
-where $\beta\equiv[\mu,\tau_1,\tau_2]'$
+<br>
 
 
-Equation \@ref(eq:beta_origin) with $\sum_{i}\tau_i=0$ becomes
 
-$$
-\begin{align}
+Equation \@ref(eq:betaorigin) with $\sum_{i}\tau_i=0$ becomes  
+
+<br>
+
+\begin{equation}
+\begin{split}
 \mathbf{b}= \left[\begin{array}{c}
 \hat{\mu} \\
 \hat{\tau_1} \\
 \hat{\tau_2} \\
 \end{array}\right] &= 
 (\mathbf{x}'\mathbf{x})^{-1}\mathbf{x}'\mathbf{y} \\
-
 & = 
 \left[\begin{array}{ccc}
 \sum_{i}n_i & n_1-n_3 & n_2-n_3\\
@@ -411,27 +478,25 @@ Y_{..}\\
 Y_{1.}-Y_{3.}\\
 Y_{2.}-Y_{3.}\\
 \end{array}\right] \\
-
 & =
 \left[\begin{array}{c}
 \frac{1}{3}\sum_{i=1}^{3}\bar{Y_{i.}}\\
 \bar{Y_{1.}}-\frac{1}{3}\sum_{i=1}^{3}\bar{Y_{i.}}\\
 \bar{Y_{2.}}-\frac{1}{3}\sum_{i=1}^{3}\bar{Y_{i.}}\\
 \end{array}\right]\\
-
 & = 
 \left[\begin{array}{c}
 \hat{\mu}\\
 \hat{\tau_1}\\
 \hat{\tau_2}\\
 \end{array}\right]
-\end{align}
-$$
+\end{split}
+\end{equation}
 
-and $\hat{\tau_3}=-\hat{\tau_1}-\hat{\tau_2}=\bar{Y_3}-\frac{1}{3} \sum_{i}\bar{Y_{i.}}$
+and $\hat{\tau_3}=-\hat{\tau_1}-\hat{\tau_2}=\bar{Y_3}-\frac{1}{3} \sum_{i}\bar{Y_{i.}}$  
 
 
-In R, `lm()` uses the restriction $\tau_1=0$
+In R, `lm()` uses the restriction $\tau_1=0$  
 
 
 
