--- a/09-bookdown_cheat_sheet.Rmd
+++ b/09-bookdown_cheat_sheet.Rmd
@@ -155,64 +155,28 @@ $$\mathbf{X} = \left[\begin{array}
 \end{array}\right]
 $$
 
-Define `\mx` to be `\mathbf`
-`$$\newcommand{\mx}[1]{\mathbf{#1}}$$`
-$$\newcommand{\mx}[1]{\mathbf{#1}}$$
-
-
-
-$$\mx{y} = \mx{X\beta}$$
 
 Aligning Equations
 
-```{r eval=FALSE}
-$$ 
-%% Comment -- define some macros
-\def\Xbar{\overline{X}_\bullet}
-\def\sumn{\sum_{i=1}^{n}}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{align}
-\sumn \left(X_i - \Xbar\right) &= \sumn X_i - \sumn \Xbar \\
-                              &= \sumn X_i - n \Xbar \\
-                              &= \sumn X_i - \sumn X_i \\
-                              &= 0
-\end{align}
-$$
-```
-
-
-$$ 
-%% Comment -- define some macros
-\def\Xbar{\overline{X}_\bullet}
-\def\sumn{\sum_{i=1}^{n}}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{align}
-\sumn \left(X_i - \Xbar\right) &= \sumn X_i - \sumn \Xbar \\
-                              &= \sumn X_i - n \Xbar \\
-                              &= \sumn X_i - \sumn X_i \\
-                              &= 0
-\end{align}
-$$
 
 Aligning Equations with Comments
 
 ```{r eval=FALSE}
-$$
 \begin{align}
     3+x &=4 && \text{(Solve for} x \text{.)}\\
     x &=4-3 && \text{(Subtract 3 from both sides.)}\\
     x &=1   && \text{(Yielding the solution.)}
 \end{align}
-$$
+
 ```
 
-$$
+
 \begin{align}
     3+x &=4 && \text{(Solve for} x \text{.)}\\
     x &=4-3 && \text{(Subtract 3 from both sides.)}\\
     x &=1   && \text{(Yielding the solution.)}
 \end{align}
-$$
+
 
 
 ### Statistics Notation
@@ -220,8 +184,19 @@ $$
 $$f(y|N,p) = \frac{N!}{y!(N-y)!}\cdot p^y \cdot (1-p)^{N-y} = {{N}\choose{y}} \cdot p^y \cdot (1-p)^{N-y}$$
 ```
 $$f(y|N,p) = \frac{N!}{y!(N-y)!}\cdot p^y \cdot (1-p)^{N-y} = {{N}\choose{y}} \cdot p^y \cdot (1-p)^{N-y}$$
+```{r eval=FALSE}
+\begin{cases}
+\frac{1}{b-a}&\text{for $x\in[a,b]$}\\
+0&\text{otherwise}\\
+\end{cases}
+```
 
 
+
+\begin{cases}
+\frac{1}{b-a}&\text{for $x\in[a,b]$}\\
+0&\text{otherwise}\\
+\end{cases}
 
 ## Table
 ```{r eval = FALSE}
@@ -282,20 +257,6 @@ The Pandoc documentation provides more details on automatic section IDs and impl
 ## Figures, tables, citations
 
 Figures and tables with captions will be placed in `figure` and `table` environments, respectively.
-
-```{r nice-fig, fig.cap='Here is a nice figure!', out.width='80%', fig.asp=.75, fig.align='center'}
-par(mar = c(4, 4, .1, .1))
-plot(pressure, type = 'b', pch = 19)
-```
-
-Reference a figure by its code chunk label with the `fig:` prefix, e.g., see Figure \@ref(fig:nice-fig). Similarly, you can reference tables generated from `knitr::kable()`, e.g., see Table \@ref(tab:nice-tab).
-
-```{r nice-tab, tidy=FALSE}
-knitr::kable(
-  head(iris, 20), caption = 'Here is a nice table!',
-  booktabs = TRUE
-)
-```
 
 You can write citations, too. For example, we are using the **bookdown** package [@R-bookdown] in this sample book, which was built on top of R Markdown and **knitr** [@knitr-book].
 
