--- a/book.bib
+++ b/book.bib
@@ -8,3 +8,11 @@
   note = {ISBN 978-1498716963},
   url = {http://yihui.org/knitr/},
 }
+
+@Book{Pearl_2018,
+  title = {The Book of Why: The New Science of Cause and Effect},
+  author = {Dana Mackenzie and Judea Pearl},
+  year = {2018},
+  note = {ISBN 978-1541698963},
+  url = {http://bayes.cs.ucla.edu/WHY/},
+}
