--- a/references.bib
+++ b/references.bib
@@ -1,16 +1,3 @@
-@article{Farjam_2015,
-	doi = {10.18775/ijmsba.1849-5664-5419.2014.18.1002},
-	url = {https://doi.org/10.18775%2Fijmsba.1849-5664-5419.2014.18.1002},
-	year = 2015,
-	publisher = {Inovatus Usluge d.o.o.},
-	volume = {1},
-	number = {8},
-	pages = {14--29},
-	author = {Sanaz Farjam and Xu Hongyi},
-	title = {Reviewing the Concept of Brand Equity and Evaluating Consumer-Based Brand Equity ({CBBE}) Models},
-	journal = {The International Journal of Management Science and Business Administration}
-}
-
 @article{Looney_1985,
 	doi = {10.2307/2683917},
 	url = {https://doi.org/10.2307%2F2683917},
@@ -105,5 +92,33 @@
 	author = {Anil K. Bera and Carlos M. Jarque},
 	title = {Efficient tests for normality, homoscedasticity and serial independence of regression residuals},
 	journal = {Economics Letters}
+}
+
+@article{Mahajan_1993,
+	doi = {10.2307/1251853},
+	url = {https://doi.org/10.2307%2F1251853},
+	year = 1993,
+	month = {jul},
+	publisher = {{SAGE} Publications},
+	volume = {57},
+	number = {3},
+	pages = {39},
+	author = {Vijay Mahajan and Subhash Sharma and Robert D. Buzzell},
+	title = {Assessing the Impact of Competitive Entry on Market Expansion and Incumbent Sales},
+	journal = {Journal of Marketing}
+}
+
+@article{Landsman_2020,
+	doi = {10.1177/0022242919901277},
+	url = {https://doi.org/10.1177%2F0022242919901277},
+	year = 2020,
+	month = {feb},
+	publisher = {{SAGE} Publications},
+	volume = {84},
+	number = {3},
+	pages = {122--141},
+	author = {Vardit Landsman and Stefan Stremersch},
+	title = {The Commercial Consequences of Collective Layoffs: Close the Plant, Lose the Brand?},
+	journal = {Journal of Marketing}
 }
 
