--- a/03-regression-analysis.Rmd
+++ b/03-regression-analysis.Rmd
@@ -151,8 +151,18 @@ Hence, we need to make assumption on $\Omega$ to make it feasible to estimate $\
 
 $$
 Var(\epsilon_i |x_i) = E(\epsilon^2|x_i) \neq \sigma^2 \\
-= h(x_i) = \sigma_i^2 && \text{error is a function of x} \\
+= h(x_i) = \sigma_i^2 \text{(variance of the error term is a function of x)}
 $$
+
+$$
+y_i = x_i\beta + \epsilon_i \\
+(1/\sigma_i)y_i = (1/\sigma_i)x_i\beta + (1/\sigma_i)\epsilon_i
+$$
+
+
+
+
+
 
 ### Weighted Least Squares
 
