--- a/03-regression-analysis.Rmd
+++ b/03-regression-analysis.Rmd
@@ -149,19 +149,34 @@ Hence, we need to make assumption on $\Omega$ to make it feasible to estimate $\
  
 #### Heteroskedasticity
 
-$$
-Var(\epsilon_i |x_i) = E(\epsilon^2|x_i) \neq \sigma^2 \\
-= h(x_i) = \sigma_i^2 \text{(variance of the error term is a function of x)}
-$$
+
+\begin{equation}
+\begin{split}
+Var(\epsilon_i |x_i) & = E(\epsilon^2|x_i) \neq \sigma^2 \\
+& = h(x_i) = \sigma_i^2 \text{(variance of the error term is a function of x)}
+\end{split}
+(\#eq:h-var-error-term)
+\end{equation}
+
+
+For our model,
 
 $$
 y_i = x_i\beta + \epsilon_i \\
 (1/\sigma_i)y_i = (1/\sigma_i)x_i\beta + (1/\sigma_i)\epsilon_i
 $$
 
+then, from \@ref(eq:h-var-error-term)
 
+\begin{equation}
+\begin{split}
+Var((1/\sigma_i)\epsilon_i|X) &= (1/\sigma_i^2) Var(\epsilon_i|X) \\
+&= (1/\sigma_i^2)\sigma_i^2 \\
+&= 1
+\end{split}
+\end{equation}
 
-
+then the $$
 
 
 ### Weighted Least Squares
