--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -18,6 +18,10 @@ It's all fun and exciting when I learned these new tools. But I have to admit th
     + If you want to explore new and upcoming method, read the [Advanced Methods] section.  
     + If you want to create your experiment and test your hypothesis, read the [Experimental Design] section.  
         
+ * Alternatively, if you rather see the application of models, and disregard the theory and underlying mechanisms, you can skip to summary portion of each section.
+        
+        
+        
  * If you don't understand a part, search the title of that part of that part on Google, and read more into that subject. This is just a general guide. 
  * If you want to customize your code beyond the ones provided in this book, run in the console `help(code)` or `?code`. For example, I want more information on `hist` function, I'll type in the console `?hist` or `help(hist)`.  
  * Another way is that you can search on Google. Different people will use different packages to achieve the same result in R. Accordingly, if you want to create a histogram, search on Google `histogram in R`, then you should be able to find multiple ways to create histogram in R.
