--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -18,7 +18,7 @@ It's all fun and exciting when I learned these new tools. But I have to admit th
     + If you want to explore new and upcoming method, read the [Advanced Methods] section.  
     + If you want to create your experiment and test your hypothesis, read the [Experimental Design] section.  
         
- * Alternatively, if you rather see the application of models, and disregard the theory and underlying mechanisms, you can skip to summary portion of each section.
+ * Alternatively, if you rather see the application of models, and disregard any theory or underlying mechanisms, you can skip to summary portion of each section.
         
         
         
